msg/src/.antlr/msgParser.java
// Generated from d:\vmssoftware.work\vms_ide\msg-antlr\src\msg.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class msgParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, FAO=4, TITLE=5, IDENT=6, PAGE=7, FACILITY=8, SEVERITY=9, 
		BASE=10, END=11, LITERAL=12, QPREFIX=13, QSHARED=14, QSYSTEM=15, QFAOCOUNT=16, 
		QIDENTIFICATION=17, QUSERVALUE=18, QSUCCESS=19, QINFORMATIONAL=20, QWARNING=21, 
		QERROR=22, QSEVERE=23, QFATAL=24, SUCCESS=25, INFORMATIONAL=26, WARNING=27, 
		ERROR=28, SEVERE=29, FATAL=30, WHITESPACE=31, NEWLINE=32, NAME=33, NUMBER=34, 
		ZNUMBER=35, DQUOTA=36, QUOTA=37, COMMA=38, EQ=39, ADD=40, SUB=41, MUL=42, 
		DIV=43, BRK_OPEN=44, BRK_CLOS=45, PUNCTUATION=46, ANY=47;
	public static final int
		RULE_mainRule = 0, RULE_title = 1, RULE_titleDescription = 2, RULE_separatorWithContinuation = 3, 
		RULE_endOfLineWithComment = 4, RULE_ident = 5, RULE_identValue = 6, RULE_simpleString = 7, 
		RULE_page = 8, RULE_facility = 9, RULE_facilityDescription = 10, RULE_facilityQualifier = 11, 
		RULE_prefixQualifier = 12, RULE_sharedQualifier = 13, RULE_systemQualifier = 14, 
		RULE_facilityContent = 15, RULE_literal = 16, RULE_literalDefinition = 17, 
		RULE_severity = 18, RULE_severityValue = 19, RULE_base = 20, RULE_end = 21, 
		RULE_expression = 22, RULE_empty = 23, RULE_commentEOL = 24, RULE_commentSign = 25, 
		RULE_continuation = 26, RULE_continuationSign = 27, RULE_message = 28, 
		RULE_messageQualifier = 29, RULE_severityQualifier = 30, RULE_faoCount = 31, 
		RULE_faoCountValue = 32, RULE_identification = 33, RULE_userValue = 34, 
		RULE_success = 35, RULE_informational = 36, RULE_warning = 37, RULE_error = 38, 
		RULE_severe = 39, RULE_fatal = 40, RULE_messageText = 41, RULE_fao = 42;
	public static final String[] ruleNames = {
		"mainRule", "title", "titleDescription", "separatorWithContinuation", 
		"endOfLineWithComment", "ident", "identValue", "simpleString", "page", 
		"facility", "facilityDescription", "facilityQualifier", "prefixQualifier", 
		"sharedQualifier", "systemQualifier", "facilityContent", "literal", "literalDefinition", 
		"severity", "severityValue", "base", "end", "expression", "empty", "commentEOL", 
		"commentSign", "continuation", "continuationSign", "message", "messageQualifier", 
		"severityQualifier", "faoCount", "faoCountValue", "identification", "userValue", 
		"success", "informational", "warning", "error", "severe", "fatal", "messageText", 
		"fao"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'!'", "'<'", "'>'", null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'\"'", "'''", "','", "'='", "'+'", "'-'", "'*'", "'/'", "'('", "')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "FAO", "TITLE", "IDENT", "PAGE", "FACILITY", "SEVERITY", 
		"BASE", "END", "LITERAL", "QPREFIX", "QSHARED", "QSYSTEM", "QFAOCOUNT", 
		"QIDENTIFICATION", "QUSERVALUE", "QSUCCESS", "QINFORMATIONAL", "QWARNING", 
		"QERROR", "QSEVERE", "QFATAL", "SUCCESS", "INFORMATIONAL", "WARNING", 
		"ERROR", "SEVERE", "FATAL", "WHITESPACE", "NEWLINE", "NAME", "NUMBER", 
		"ZNUMBER", "DQUOTA", "QUOTA", "COMMA", "EQ", "ADD", "SUB", "MUL", "DIV", 
		"BRK_OPEN", "BRK_CLOS", "PUNCTUATION", "ANY"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "msg.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public msgParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainRuleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(msgParser.EOF, 0); }
		public List<TitleContext> title() {
			return getRuleContexts(TitleContext.class);
		}
		public TitleContext title(int i) {
			return getRuleContext(TitleContext.class,i);
		}
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public List<FacilityContext> facility() {
			return getRuleContexts(FacilityContext.class);
		}
		public FacilityContext facility(int i) {
			return getRuleContext(FacilityContext.class,i);
		}
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<EmptyContext> empty() {
			return getRuleContexts(EmptyContext.class);
		}
		public EmptyContext empty(int i) {
			return getRuleContext(EmptyContext.class,i);
		}
		public MainRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainRule; }
	}

	public final MainRuleContext mainRule() throws RecognitionException {
		MainRuleContext _localctx = new MainRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mainRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TITLE) | (1L << IDENT) | (1L << PAGE) | (1L << FACILITY) | (1L << LITERAL) | (1L << WHITESPACE) | (1L << NEWLINE))) != 0)) {
				{
				setState(92);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TITLE:
					{
					setState(86);
					title();
					}
					break;
				case IDENT:
					{
					setState(87);
					ident();
					}
					break;
				case PAGE:
					{
					setState(88);
					page();
					}
					break;
				case FACILITY:
					{
					setState(89);
					facility();
					}
					break;
				case LITERAL:
					{
					setState(90);
					literal();
					}
					break;
				case WHITESPACE:
				case NEWLINE:
					{
					setState(91);
					empty();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public Token keyword;
		public Token name;
		public List<TerminalNode> WHITESPACE() { return getTokens(msgParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(msgParser.WHITESPACE, i);
		}
		public TerminalNode NEWLINE() { return getToken(msgParser.NEWLINE, 0); }
		public TerminalNode TITLE() { return getToken(msgParser.TITLE, 0); }
		public TerminalNode NAME() { return getToken(msgParser.NAME, 0); }
		public TitleDescriptionContext titleDescription() {
			return getRuleContext(TitleDescriptionContext.class,0);
		}
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_title);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((TitleContext)_localctx).keyword = match(TITLE);
			setState(100);
			match(WHITESPACE);
			setState(101);
			((TitleContext)_localctx).name = match(NAME);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHITESPACE) {
				{
				setState(102);
				match(WHITESPACE);
				setState(103);
				titleDescription();
				}
			}

			setState(106);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleDescriptionContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(msgParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(msgParser.NEWLINE, i);
		}
		public TitleDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titleDescription; }
	}

	public final TitleDescriptionContext titleDescription() throws RecognitionException {
		TitleDescriptionContext _localctx = new TitleDescriptionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_titleDescription);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << FAO) | (1L << TITLE) | (1L << IDENT) | (1L << PAGE) | (1L << FACILITY) | (1L << SEVERITY) | (1L << BASE) | (1L << END) | (1L << LITERAL) | (1L << QPREFIX) | (1L << QSHARED) | (1L << QSYSTEM) | (1L << QFAOCOUNT) | (1L << QIDENTIFICATION) | (1L << QUSERVALUE) | (1L << QSUCCESS) | (1L << QINFORMATIONAL) | (1L << QWARNING) | (1L << QERROR) | (1L << QSEVERE) | (1L << QFATAL) | (1L << SUCCESS) | (1L << INFORMATIONAL) | (1L << WARNING) | (1L << ERROR) | (1L << SEVERE) | (1L << FATAL) | (1L << WHITESPACE) | (1L << NAME) | (1L << NUMBER) | (1L << ZNUMBER) | (1L << DQUOTA) | (1L << QUOTA) | (1L << COMMA) | (1L << EQ) | (1L << ADD) | (1L << SUB) | (1L << MUL) | (1L << DIV) | (1L << BRK_OPEN) | (1L << BRK_CLOS) | (1L << PUNCTUATION) | (1L << ANY))) != 0)) {
				{
				{
				setState(108);
				_la = _input.LA(1);
				if ( _la <= 0 || (_la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeparatorWithContinuationContext extends ParserRuleContext {
		public List<TerminalNode> WHITESPACE() { return getTokens(msgParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(msgParser.WHITESPACE, i);
		}
		public List<ContinuationContext> continuation() {
			return getRuleContexts(ContinuationContext.class);
		}
		public ContinuationContext continuation(int i) {
			return getRuleContext(ContinuationContext.class,i);
		}
		public SeparatorWithContinuationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_separatorWithContinuation; }
	}

	public final SeparatorWithContinuationContext separatorWithContinuation() throws RecognitionException {
		SeparatorWithContinuationContext _localctx = new SeparatorWithContinuationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_separatorWithContinuation);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(115); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(114);
						continuation();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(117); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				{
				setState(119);
				match(WHITESPACE);
				}
				break;
			}
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(122);
				match(WHITESPACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndOfLineWithCommentContext extends ParserRuleContext {
		public CommentEOLContext commentEOL() {
			return getRuleContext(CommentEOLContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(msgParser.NEWLINE, 0); }
		public TerminalNode WHITESPACE() { return getToken(msgParser.WHITESPACE, 0); }
		public EndOfLineWithCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endOfLineWithComment; }
	}

	public final EndOfLineWithCommentContext endOfLineWithComment() throws RecognitionException {
		EndOfLineWithCommentContext _localctx = new EndOfLineWithCommentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_endOfLineWithComment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(125);
				match(WHITESPACE);
				}
				break;
			}
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case WHITESPACE:
				{
				setState(128);
				commentEOL();
				}
				break;
			case NEWLINE:
				{
				setState(129);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentContext extends ParserRuleContext {
		public Token keyword;
		public SeparatorWithContinuationContext separatorWithContinuation() {
			return getRuleContext(SeparatorWithContinuationContext.class,0);
		}
		public IdentValueContext identValue() {
			return getRuleContext(IdentValueContext.class,0);
		}
		public EndOfLineWithCommentContext endOfLineWithComment() {
			return getRuleContext(EndOfLineWithCommentContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(msgParser.IDENT, 0); }
		public IdentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ident; }
	}

	public final IdentContext ident() throws RecognitionException {
		IdentContext _localctx = new IdentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ident);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			((IdentContext)_localctx).keyword = match(IDENT);
			setState(133);
			separatorWithContinuation();
			setState(134);
			identValue();
			setState(135);
			endOfLineWithComment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentValueContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(msgParser.NAME, 0); }
		public SimpleStringContext simpleString() {
			return getRuleContext(SimpleStringContext.class,0);
		}
		public IdentValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identValue; }
	}

	public final IdentValueContext identValue() throws RecognitionException {
		IdentValueContext _localctx = new IdentValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_identValue);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(NAME);
				}
				break;
			case DQUOTA:
			case QUOTA:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				simpleString();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleStringContext extends ParserRuleContext {
		public List<TerminalNode> QUOTA() { return getTokens(msgParser.QUOTA); }
		public TerminalNode QUOTA(int i) {
			return getToken(msgParser.QUOTA, i);
		}
		public List<TerminalNode> DQUOTA() { return getTokens(msgParser.DQUOTA); }
		public TerminalNode DQUOTA(int i) {
			return getToken(msgParser.DQUOTA, i);
		}
		public SimpleStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleString; }
	}

	public final SimpleStringContext simpleString() throws RecognitionException {
		SimpleStringContext _localctx = new SimpleStringContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simpleString);
		int _la;
		try {
			int _alt;
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUOTA:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(141);
				match(QUOTA);
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(142);
						_la = _input.LA(1);
						if ( _la <= 0 || (_la==QUOTA) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						} 
					}
					setState(147);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				setState(148);
				match(QUOTA);
				}
				}
				break;
			case DQUOTA:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(149);
				match(DQUOTA);
				setState(153);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(150);
						_la = _input.LA(1);
						if ( _la <= 0 || (_la==DQUOTA) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						} 
					}
					setState(155);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(156);
				match(DQUOTA);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public Token keyword;
		public EndOfLineWithCommentContext endOfLineWithComment() {
			return getRuleContext(EndOfLineWithCommentContext.class,0);
		}
		public TerminalNode PAGE() { return getToken(msgParser.PAGE, 0); }
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_page);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			((PageContext)_localctx).keyword = match(PAGE);
			setState(160);
			endOfLineWithComment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FacilityContext extends ParserRuleContext {
		public Token keyword;
		public SeparatorWithContinuationContext separatorWithContinuation() {
			return getRuleContext(SeparatorWithContinuationContext.class,0);
		}
		public FacilityDescriptionContext facilityDescription() {
			return getRuleContext(FacilityDescriptionContext.class,0);
		}
		public TerminalNode FACILITY() { return getToken(msgParser.FACILITY, 0); }
		public FacilityContentContext facilityContent() {
			return getRuleContext(FacilityContentContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public FacilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_facility; }
	}

	public final FacilityContext facility() throws RecognitionException {
		FacilityContext _localctx = new FacilityContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_facility);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			((FacilityContext)_localctx).keyword = match(FACILITY);
			setState(163);
			separatorWithContinuation();
			setState(164);
			facilityDescription();
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(165);
				facilityContent();
				}
				break;
			}
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==END) {
				{
				setState(168);
				end();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
